--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "pages/good-detail/index",
     "pages/order-confirm/index",
     "pages/logs/logs",
-    "pages/test/test"
+    "pages/mine/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -40,7 +40,7 @@
         "selectedIconPath": "images/icon/diary.png"
       },
       {
-        "pagePath": "pages/test/test",
+        "pagePath": "pages/mine/index",
         "text": "我的",
         "iconPath": "images/icon/music.png",
         "selectedIconPath": "images/icon/music.png"
