--- a/app.json
+++ b/app.json
@@ -9,6 +9,7 @@
     "pages/ship/index",
     "pages/order-detail/index",
     "pages/good-detail/index",
+    "pages/good-edit/index",
     "pages/order-confirm/index",
     "pages/mine/index"
   ],
