字典管理+用户管理

--- a/app.json
+++ b/app.json
@@ -3,6 +3,9 @@
     "pages/login/index",
     "pages/index/index",
     "pages/user/index",
+    "pages/map/index",
+    "pages/menu/index",
+    "pages/unit/index",
     "pages/good/index",
     "pages/order/index",
     "pages/setting/index",
