--- a/app.json
+++ b/app.json
@@ -1,23 +1,24 @@
 {
   "pages": [
     "pages/login/index",
+    "pages/good/index",
+    "pages/good-edit/index",
+    "pages/good-detail/index",
     "pages/index/index",
-    "pages/user/index",
     "pages/map/index",
     "pages/menu/index",
-    "pages/search/index",
-    "pages/unit/index",
-    "pages/good/index",
+    "pages/mine/index",
     "pages/order/index",
-    "pages/setting/index",
-    "pages/shop/index",
-    "pages/ship/index",
-    "pages/order-detail/index",
-    "pages/good-detail/index",
-    "pages/good-edit/index",
-    "pages/user-edit/index",
     "pages/order-confirm/index",
-    "pages/mine/index"
+    "pages/order-detail/index",
+    "pages/search/index",
+    "pages/setting/index",
+    "pages/ship/index",
+    "pages/shop/index",
+    "pages/unit/index",
+    "pages/user/index",
+    "pages/user-edit/index",
+    "pages/user-detail/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
